flask-productpage-gateway-vsvc.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flask-productpage-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-productpage
spec:
  hosts:
  - "*"
  gateways:
  - flask-productpage-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /productpage
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: flaskapp-withproductpage
        port:
          number: 8080
